--- a/conf/app.conf
+++ b/conf/app.conf
@@ -15,8 +15,8 @@ dbuser = root
 dbpassword = root
 
 # MYSQL数据库名称
-dbname = db_blog
+dbname = go_blog
 
 # MYSQL表前缀
-dbprefix = tb_
+dbprefix = go_
 
